refactor: listy, switche